# open-value

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: advantage.yaml  cloud.example.yaml  cloud.yaml  config.yaml  eval.yaml
configs/sweeps/: lr_batch_sweep.yaml  lr_grid.yaml
docs/: cloud.md
docs/diagrams/: README.md  architecture.tex
src/open_value_estimator/: __init__.py  advantage.py  config.py  dataset.py  eval.py  sweep.py  training.py  utils.py  value_estimator.py
src/open_value_estimator/cloud/: __init__.py  cloud_eval.py  cloud_launcher.py  cloud_training.py
tests/: __init__.py  conftest.py  test_advantage.py  test_cloud.py  test_config.py  test_dataset.py  test_eval.py  test_training.py  test_utils.py  test_value_estimator.py
