[project]
name = "open-value-estimator"
version = "0.1.0"
description = "A open value estimator for robotics research"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.7.0",
    "lerobot>=0.4.2",
    "huggingface_hub",
    "transformers>=4.57.0",
    "sentencepiece>=0.2.0",
    "einops",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb",
    "safetensors",
    "opencv-python>=4.8.0",
    "accelerate>=0.25.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
cloud = ["coalesce"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_value_estimator"]

[tool.uv.sources]
coalesce = { git = "https://github.com/brysonjones/coalesce.git" }

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["ruff", "pytest>=8.0"]
